[package]
name = "intersection-controller"
version = "0.1.0"
authors = ["Jan Wilts <jan@janwilts.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.6"
config = "0.9.3"
crossbeam-channel = "0.3.8"
crossterm = "0.9.5"
failure = "0.1.5"
fern = "0.5.8"
log = "0.4.6"
regex = "1.1.6"
rumqtt = "0.30.1"
serde = "1.0.91"
serde_derive = "1.0.91"
time = "0.1.42"

[dependencies.tui]
version = "0.6.0"
default-features = false
features = ['crossterm']
