[package]
name = "intersection-controller"
version = "0.1.0"
authors = ["Jan Wilts <jan@janwilts.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.6"
colored = "1.8.0"
config = "0.9.3"
crossbeam-channel = "0.3.8"
failure = "0.1.5"
log = "0.4.6"
regex = "1.1.6"
rumqtt = "0.30.1"
serde = "1.0.91"
serde_derive = "1.0.91"
time = "0.1.42"

[dependencies.fern]
version = "0.5.8"
features = ["colored"]
